# app/Http/Requests/EvaluationRequest.php
@@ -25,7 +25,7 @@ class EvaluationRequest extends FormRequest{
         return [
             'participant_id' => ['required'],
             'judge_id' => ['required'],
-            'event_id' => ['nullable'],
+            'eventDay_id' => ['nullable'],
             'modality_id' => ['required'],
             'date' => ['nullable'],
         ];
